
  [ Andreas Boll ]
  * New upstream release candidate.
  * Drop transitional package libegl1-mesa-drivers.
  * Remove Breaks/Replaces from pre-jessie.
  * Explicitly disable LLVM on some arches. Should fix FTBFS on x32.
  * Drop configure.ac-Require-LLVM-for-r300-only-on-x86-and-x.patch,
    upstream.
  * Cherry-pick 045f38a (vulkan: Don't install vk_platform.h or
    vulkan.h).

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 02 Feb 2017 12:02:07 +0200

mesa (17.0.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.
  * Add configure.ac-Require-LLVM-for-r300-only-on-x86-and-x.patch:
    Should fix FTBFS on some arches.
  * rules: Explicitly enable/disable gbm. Should fix FTBFS on hurd.
  * Revert to debhelper compat 9 (Workaround for #851130).

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Wed, 25 Jan 2017 16:45:53 +0100

mesa (17.0.0~rc1-1) experimental; urgency=medium

  * New upstream release candidate.
  * Bump libdrm-dev build-dep to 2.4.74 per configure.ac.
  * Bump libwayland-dev build-dep to 1.11.0 per configure.ac.
  * Remove libgcrypt20-dev build-dep per configure.ac.
  * Update watch url.
  * Drop vl-zscan-fix-Fix-trivial-sign-compare-warnings.diff and r600-
    sb-Fix-loop-optimization-related-hangs-on-eg.diff, upstream.
  * Drop workaround-binutils-mips-844357.diff, binutils regression has
    been fixed.
  * Rename EGL_DISPLAYS to EGL_PLATFORMS.
  * Update extend-diff-ignore.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 19 Jan 2017 18:39:06 +0100

mesa (13.0.3-1) unstable; urgency=medium

  [ Timo Aaltonen ]
  * New upstream release.

  [ Andreas Boll ]
  * Add vl-zscan-fix-Fix-trivial-sign-compare-warnings.diff: Fixes mpeg2
    decoding on radeon GPUs without native mpeg2 support (Closes:
    #846297).  Thanks to Jörg-Volker Peetz for reporting and tracking
    down this regression!
  * Add r600-sb-Fix-loop-optimization-related-hangs-on-eg.diff: Fixes
    GPU hangs on r600g (Evergreen and Northern Islands GPUs) in many