@@ -187,11 +187,8 @@ override_dh_install:
 
   # Remove vulkan headers only where they get installed in tmp
   # We ship those headers via src:vulkan / libvulkan-dev
-  ifneq (,$(filter $(DEB_HOST_ARCH),amd64 i386 arm64 armhf ppc64el x32))
-	set -e; for file in vk_platform.h vulkan.h; do rm debian/tmp/usr/include/vulkan/$$file; done
-    ifneq (,$(filter $(DEB_HOST_ARCH),amd64 i386 x32))
+  ifneq (,$(filter $(DEB_HOST_ARCH),amd64 i386 x32))
 	rm debian/tmp/usr/include/vulkan/vulkan_intel.h
-    endif
 	rmdir debian/tmp/usr/include/vulkan
   endif
 
